:'] can never have a perfect push

--- a/frogs.html
+++ b/frogs.html
@@ -3,7 +3,8 @@
 	<head>
     <meta name="viewport" content="width=100%, initial-scale=1.0, maximum-scale=1.00">
     <title>Browser Flipnote Frogs</title>
-	<link rel="tab icon" href="images/frog.ico">
+	<link rel="tab icon" href="images/frog.png">
+	<link rel="icon" href="images/frog.ico">
     <style>
 	
 		@font-face {
