one more one more try

--- a/frogs.html
+++ b/frogs.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=100%, initial-scale=1.0, maximum-scale=1.00">
 	
     <title>Browser Flipnote Frogs</title>
-	<link rel="tab icon" href="images/frog.png">
-	<link rel="icon" href="images/frog.ico">
+	<link rel="tab icon" href="frog.png">
+	<link rel="icon" href="frog.ico">
 	
     <style>
 	
@@ -169,7 +169,7 @@
 	</head>
 <body>
 
-	<div class=footerthing><p style="white-space:pre-wrap;"class=footertext>Website font and Flipnote Frog graphics by King Mayro,  Flipnote Studio by Nintendo</p></div>
+	<div class=footerthing><p style="white-space:pre-wrap;" class=footertext>Website font and Flipnote Frog graphics by King Mayro,  Flipnote Studio by Nintendo</p></div>
 
 	<div class=main>
 	
