--- a/frogs.html
+++ b/frogs.html
@@ -9,6 +9,12 @@
 	<link rel="tab icon" href="frog.png">
 	<link rel="icon" href="frog.ico">
 	
+	<meta property="og:title" content="King Mayro - Browser Flipnote Frogs"/>
+	<meta property="og:url" content="https://kingmayro.github.io/frogs"/>
+	<meta property="og:image" content="images/frogembed.png"/>
+	<meta name="twitter:card" content="summary_large_image">
+	<meta data-react-helmet="true" name="theme-color" content="#cd532d"/>
+	
     <style>
 	
 		@font-face {
