well I think I figured it out

--- a/frogs.html
+++ b/frogs.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=100%, initial-scale=1.0, maximum-scale=1.00">
 	
     <title>Browser Flipnote Frogs</title>
-	<link rel="tab icon" href="frog.png">
-	<link rel="icon" href="frog.ico">
+	<link rel="tab icon" href="https://kingmayro.github.io/images/frog.png">
+	<link rel="icon" href="https://kingmayro.github.io/images/frog.ico">
 	
 	<meta property="og:title" content="King Mayro - Browser Flipnote Frogs"/>
 	<meta property="og:url" content="https://kingmayro.github.io/frogs"/>
-	<meta property="og:image" content="images/frogembed.png"/>
+	<meta property="og:image" content="https://kingmayro.github.io/images/frogembed.png"/>
 	<meta name="twitter:card" content="summary_large_image">
 	<meta data-react-helmet="true" name="theme-color" content="#cd532d"/>
 	
