testing moving the script out of inline

--- a/frogsios.html
+++ b/frogsios.html
@@ -15,6 +15,9 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta data-react-helmet="true" name="theme-color" content="#cd532d"/>
 	
+	<link rel="preload" href="https://kingmayro.github.io/browserfrog/frog.js" as="script">
+
+	
     <style>
 	
 		@font-face {
@@ -32,7 +35,9 @@
 		background-image: url('browserfrog/notepad.png');
 		font-family:"Moving Flipbook Gallery";
 		color: #cd532d;
+		overflow: hidden;
 		}
+		
 	
         main {
             display: flex;
@@ -291,338 +296,7 @@
 
 <script>
 
-        function showMessageBox() {
-            const messageBox = document.getElementById("messageBox");
-            messageBox.classList.add("show");
-        }
-
-        function hideMessageBox() {
-            const messageBox = document.getElementById("messageBox");
-            messageBox.classList.remove("show");
-        }
-
-
-
-	//I may merge this into the main version because this system of handling is a little smoother than I thought
-    const frogContainers = document.querySelectorAll('.frog-container');
-    const frames = {
-        facingRight: ['iosfrog/Right.png'],
-        facingLeft: ['iosfrog/Left.png'],
-        facingViewer: ['iosfrog/Idle.png']
-    };
-
-    const animations = {
-        TurnLeft: [
-            {src: "iosfrog/Idle.png", duration: 100},
-            {src: "iosfrog/MidLeft.png", duration: 100},
-            {src: "iosfrog/Left.png", duration: 100}
-        ],
-        TurnRight: [
-            {src: "iosfrog/Idle.png", duration: 100},
-            {src: "iosfrog/MidRight.png", duration: 100},
-            {src: "iosfrog/Right.png", duration: 100}
-        ],
-        LeftReturn: [
-            {src: "iosfrog/Left.png", duration: 100},
-            {src: "iosfrog/MidLeft.png", duration: 100},
-            {src: "iosfrog/Idle.png", duration: 100}
-        ],
-        RightReturn: [
-            {src: "iosfrog/Right.png", duration: 100},
-            {src: "iosfrog/MidRight.png", duration: 100},
-            {src: "iosfrog/Idle.png", duration: 100}
-        ],
-        CroakLeft: [
-            {src: "iosfrog/Left.png", duration: 100},
-            {src: "iosfrog/MidCroakLeft.png", duration: 100},
-            {src: "iosfrog/MaxCroakLeft.png", duration: 100},
-            {src: "iosfrog/MidCroakLeft.png", duration: 100},
-            {src: "iosfrog/Left.png", duration: 100}
-        ],
-        CroakRight: [
-            {src: "iosfrog/Right.png", duration: 100},
-            {src: "iosfrog/MidCroakRight.png", duration: 100},
-            {src: "iosfrog/MaxCroakRight.png", duration: 100},
-            {src: "iosfrog/MidCroakRight.png", duration: 100},
-            {src: "iosfrog/Right.png", duration: 100}
-        ],
-        JumpLeft: [
-            {src: "iosfrog/Left.png", duration: 100},
-            {src: "iosfrog/JumpUpLeft.png", duration: 100},
-            {src: "iosfrog/FallDownLeft.png", duration: 100},
-            {src: "iosfrog/Left.png", duration: 100}
-        ],
-        JumpRight: [
-            {src: "iosfrog/Right.png", duration: 100},
-            {src: "iosfrog/JumpUpRight.png", duration: 100},
-            {src: "iosfrog/FallDownRight.png", duration: 100},
-            {src: "iosfrog/Right.png", duration: 100}
-        ],
-        Blink: [
-            {src: "iosfrog/Idle.png", duration: 100},
-            {src: "iosfrog/Blink.png", duration: 100},
-            {src: "iosfrog/Idle.png", duration: 100}
-        ],
-        Croak: [
-            {src: "iosfrog/Idle.png", duration: 100},
-            {src: "iosfrog/MidCroak.png", duration: 100},
-            {src: "iosfrog/MaxCroak.png", duration: 100},
-            {src: "iosfrog/MidCroak.png", duration: 100},
-            {src: "iosfrog/Idle.png", duration: 100}
-        ],
-        Tongue: [
-            {src: "iosfrog/Idle.png", duration: 70},
-            {src: "iosfrog/LipUp.png", duration: 70},
-            {src: "iosfrog/TongueBounce.png", duration: 70},
-            {src: "iosfrog/Tongue.png", duration: 70}
-        ]
-    };
-
-    let currentStates = ['iosfrog/Idle.png', 'iosfrog/Idle.png', 'iosfrog/Idle.png'];
-    let facings = ['viewer', 'viewer', 'viewer'];
-    let currentFrameStarts = [Date.now(), Date.now(), Date.now()];
-    let verticalDraggingEnabled = true;
-
-    // Preload images
-    Object.values(animations).flat().forEach(frame => {
-        const img = new Image();
-        img.src = frame.src;
-    });
-
-    const numberOfFrogs = Math.random() < 0.4 ? 3 : 2;
-
-    const verticalPosition = window.innerHeight - 129;
-    frogContainers.forEach((container, index) => {
-        if (index < numberOfFrogs) {
-            let horizontalPosition;
-            do {
-                horizontalPosition = Math.random() * (window.innerWidth - 150);
-            } while (isTooCloseToOtherFrog(horizontalPosition, index));
-            container.style.left = `${horizontalPosition}px`;
-            container.style.top = `${verticalPosition}px`;
-            container.style.display = 'block';
-            container.addEventListener('mousedown', (event) => {
-                startDrag(event, container);
-            });
-        }
-    });
-
-    function isTooCloseToOtherFrog(position, currentIndex) {
-        const minDistance = 150;
-        for (let i = 0; i < currentIndex; i++) {
-            const rect = frogContainers[i].getBoundingClientRect();
-            const distance = Math.abs(position - rect.left);
-            if (distance < minDistance) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    function getRandomElement(arr) {
-        return arr[Math.floor(Math.random() * arr.length)];
-    }
-
-    function transitionTo(index, animation) {
-        currentStates[index] = animation[0].src;
-        let frameIndex = 0;
-
-        const nextFrame = () => {
-            const frame = animation[frameIndex];
-            const newFrogElement = document.createElement('img');
-            newFrogElement.src = frame.src;
-            newFrogElement.className = 'frog';
-            newFrogElement.onload = () => {
-                const oldFrogElement = frogContainers[index].querySelector('.frog');
-                if (oldFrogElement) {
-                    frogContainers[index].removeChild(oldFrogElement);
-                }
-                frogContainers[index].appendChild(newFrogElement);
-            };
-
-            if (frameIndex < animation.length - 1) {
-                frameIndex++;
-                setTimeout(nextFrame, frame.duration);
-            }
-        };
-
-        nextFrame();
-    }
-
-    function moveFrog(index) {
-        const actions = ['faceRight', 'faceLeft', 'doViewerAction'];
-        const action = getRandomElement(actions);
-
-        if (action === 'faceRight' && facings[index] !== 'right') {
-            if (facings[index] === 'left') {
-                transitionTo(index, animations.LeftReturn);
-                setTimeout(() => {
-                    transitionTo(index, animations.TurnRight);
-                    facings[index] = 'right';
-                    setTimeout(() => {
-                        const rightActions = ['CroakRight', 'JumpRight'];
-                        const nextAction = getRandomElement(rightActions);
-                        transitionTo(index, animations[nextAction]);
-                        if (nextAction === 'JumpRight') {
-                            jumpFrog(index, 10, 'right');
-                        }
-                    }, 300);
-                }, 300);
-            } else {
-                transitionTo(index, animations.TurnRight);
-                facings[index] = 'right';
-                setTimeout(() => {
-                    const rightActions = ['CroakRight', 'JumpRight'];
-                    const nextAction = getRandomElement(rightActions);
-                    transitionTo(index, animations[nextAction]);
-                    if (nextAction === 'JumpRight') {
-                        jumpFrog(index, 10, 'right');
-                    }
-                }, 300);
-            }
-        }
-
-        if (action === 'faceLeft' && facings[index] !== 'left') {
-            if (facings[index] === 'right') {
-                transitionTo(index, animations.RightReturn);
-                setTimeout(() => {
-                    transitionTo(index, animations.TurnLeft);
-                    facings[index] = 'left';
-                    setTimeout(() => {
-                        const leftActions = ['CroakLeft', 'JumpLeft'];
-                        const nextAction = getRandomElement(leftActions);
-                        transitionTo(index, animations[nextAction]);
-                        if (nextAction === 'JumpLeft') {
-                            jumpFrog(index, 10, 'left');
-                        }
-                    }, 300);
-                }, 300);
-            } else {
-                transitionTo(index, animations.TurnLeft);
-                facings[index] = 'left';
-                setTimeout(() => {
-                    const leftActions = ['CroakLeft', 'JumpLeft'];
-                    const nextAction = getRandomElement(leftActions);
-                    transitionTo(index, animations[nextAction]);
-                    if (nextAction === 'JumpLeft') {
-                        jumpFrog(index, 10, 'left');
-                    }
-                }, 300);
-            }
-        }
-
-        if (action === 'doViewerAction') {
-            if (facings[index] === 'right') {
-                transitionTo(index, animations.RightReturn);
-                setTimeout(() => {
-                    performViewerAction(index);
-                    facings[index] = 'viewer';
-                }, 300);
-            } else if (facings[index] === 'left') {
-                transitionTo(index, animations.LeftReturn);
-                setTimeout(() => {
-                    performViewerAction(index);
-                    facings[index] = 'viewer';
-                }, 300);
-            } else {
-                performViewerAction(index);
-            }
-        }
-
-        setTimeout(() => moveFrog(index), Math.random() * 3000 + 2000);
-    }
-
-    function performViewerAction(index) {
-        const viewerActions = ['Blink', 'Croak', 'Tongue', 'browserfrog/FrogLoad.gif', 'browserfrog/TalkMore.gif'];
-        const action = getRandomElement(viewerActions);
-
-        if (action === 'browserfrog/FrogLoad.gif' || action === 'browserfrog/TalkMore.gif') {
-            const newFrogElement = document.createElement('img');
-            newFrogElement.src = action;
-            newFrogElement.className = 'frog';
-            newFrogElement.onload = () => {
-                const oldFrogElement = frogContainers[index].querySelector('.frog');
-                if (oldFrogElement) {
-                    frogContainers[index].removeChild(oldFrogElement);
-                }
-                frogContainers[index].appendChild(newFrogElement);
-            };
-        } else {
-            transitionTo(index, animations[action]);
-        }
-    }
-
-    function jumpFrog(index, pixels, direction) {
-        let movedPixels = 0;
-        const interval = setInterval(() => {
-            if (movedPixels < pixels) {
-                const currentLeft = parseInt(frogContainers[index].style.left, 10);
-                if (direction === 'right') {
-                    frogContainers[index].style.left = `${currentLeft + 1}px`;
-                } else {
-                    frogContainers[index].style.left = `${currentLeft - 1}px`;
-                }
-                movedPixels++;
-            } else {
-                clearInterval(interval);
-            }
-        }, 10);
-    }
-
-    function startTouchDrag(event, container) {
-        const touch = event.touches[0];
-        const offsetX = touch.clientX - container.offsetLeft;
-        const offsetY = touch.clientY - container.offsetTop;
-
-        function touchDrag(event) {
-            const touch = event.touches[0];
-            container.style.left = `${touch.clientX - offsetX}px`;
-            if (verticalDraggingEnabled) {
-                container.style.top = `${touch.clientY - offsetY}px`;
-            }
-        }
-
-        function stopTouchDrag() {
-            document.removeEventListener('touchmove', touchDrag);
-            document.removeEventListener('touchend', stopTouchDrag);
-        }
-
-        document.addEventListener('touchmove', touchDrag);
-        document.addEventListener('touchend', stopTouchDrag);
-    }
-
-    frogContainers.forEach((container, index) => {
-        container.addEventListener('touchstart', (event) => {
-            startTouchDrag(event, container);
-        });
-    });
-
-    window.onload = () => {
-        for (let i = 0; i < numberOfFrogs; i++) {
-            moveFrog(i);
-        }
-    };
-	
-	        document.getElementById('toggleVerticalDragging').addEventListener('click', () => {
-            verticalDraggingEnabled = !verticalDraggingEnabled;
-            frogContainers.forEach((container, index) => {
-                container.style.top = `${verticalPosition}px`;
-            });
-        });
-	
-	
-	        let lastZoomLevel = window.devicePixelRatio;
-
-        function checkZoomLevel() {
-            if (window.devicePixelRatio !== lastZoomLevel) {
-                document.getElementById('refreshButton').style.display = 'block';
-                lastZoomLevel = window.devicePixelRatio;
-            }
-        }
-
-        window.addEventListener('resize', checkZoomLevel);
-	
-	
 </script>
+
 </body>
 </html>
